# ming

./: .gitignore  README.md  analyze_fire_metal_issue.md  debug_bazi_energy.js  fix_fire_metal_issue.md
.github/workflows/: docs-baseline-check.yml
contracts/: .gitignore  AVALANCHE_DEPLOYMENT.md  ConnectionNFT.sol  hardhat.config.js  package-lock.json  package.json
contracts/scripts/: check_mint_permission.js  deploy.js  preflight_deploy.js
contracts/solana/: Anchor.toml  Cargo.toml  README.md  package.json
contracts/solana/programs/ming_connection/: Cargo.toml
contracts/solana/programs/ming_connection/src/: lib.rs
contracts/src/: ConnectionNFT.sol
contracts/test/: ConnectionNFT.test.js
docs/: README.md  check_list.md  三步开发计划任务安排.md  代码审查和实现报告.md  代码审查和实现报告_20250131.md  任务分解分析报告.md  深度代码健壮性分析报告.md  项目分析与实现总结报告_20250114_最终版.md  项目分析与实现总结报告_20250114_最终版_v2.md
docs/01-项目概述/: 01-项目背景.md  02-核心理念.md  03-项目定位.md  ming.txt
docs/02-概要设计/: 01-系统架构设计.md  02-技术选型.md  03-功能模块设计.md  04-数据模型设计.md
docs/智能合约/: README.md  (+5 more)
scripts/: README.md  check_custom_nft_flow.sh  check_docs_baseline.sh  check_modelscope_api.sh  deploy.sh  deploy_all.sh  deploy_contract_evm.sh  deploy_vercel.sh  run_wallet_cross_window_preflight.sh  run_wallet_handshake_smoke.sh  run_wallet_integration_checks.sh  upload_to_github.sh
srcs/: .eslintrc.cjs  .gitignore  README.md  README_TESTING.md  env.example  index.html  package-lock.json  package.json  playwright.config.ts  playwright.cross-window.config.ts  tsconfig.json  vercel.json  vite.config.ts  vitest.config.ts  代码健壮性检查报告.md  编译运行结果报告.md
(+131 files in other folders)
